# B3Experience

./: README.md
file/csv/: Cargo.toml
file/csv/src/: main.rs
file/octave/: 10207in0.csv  10207out.csv  102308in.csv  102310in.csv  102310out.csv  1023__01in.csv  1023__01ou.csv  1023__02in.csv  1023__02ou.csv  1023__03in.csv  1023__03ou.csv  1023__04in.csv  1023__04ou.csv  1023__05in.csv  1023__05ou.csv  1023__06in.csv  1023__06ou.csv  JissyuVelocityAout_Revised_20201030.m  pbin.m  pbout.m  vain.m  vain2.m  vain3.m  vaout.m  vbin.m  vbout.m
reports/2_control/: report.aux  report.bbl  report.blg  report.dvi  report.fdb_latexmk  report.fls  report.tex
reports/2_control/assets/: info.sty  preamble.sty  ref.bib
