[package]
name = "csv"
version = "0.1.0"
authors = ["DenTaku <dentaku1412@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "*"
argio = "0.1.2"
competitive = { git = "https://github.com/tanakh/competitive-rs.git" }
